# pegasus

./: .deepeval_telemetry.txt  .pre-commit-config.yaml  Getting_started.ipynb  README.md  __init__.py  code.py  config.json  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  test.ipynb  testing.py
.github/workflows/: python-ci.yml
context/: google-litmus-python.txt
evaluator/: base_evaluator.py  config.py  constants.py  deepeval_evaluator.py  ragas_evaluator.py  schemas.py  utils.py
evaluator/config/: config.py
evaluator/llms/: __init__.py  vertexai_llm.py
examples/: run_evaluations.py
tests/: conftest.py  test_api.py  test_deepeval_evaluator.py  test_ragas_evaluator.py  test_vertexai_llm.py
