[project]
name = "llm_evaluator"  # Renamed from "pegasus" to match directory name and avoid conflicts
version = "0.1.0"
description = "A powerful evaluation framework for Large Language Models using RAGAS and DeepEval"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ragas>=0.0.22",
    "deepeval==2.4.6",
    "langchain-google-vertexai",
    "pandas>=2.0.0",
    "google-cloud-aiplatform>=1.38.1",
    "google-cloud-storage>=2.13.0",
    "datasets>=2.15.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.38.0",
    "vertexai>=1.43.0",
    "rich>=13.9.4",
    "pandas-stubs>=2.2.2.240807",
    "pre-commit>=4.1.0",
    "grpcio>=1.70.0", # Pin gRPC version for Python 3.12 compatibility
    "grpcio-tools>=1.70.0", # Pin gRPC tools version
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black[jupyter]>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"  # Updated to match your mypy.ini
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py38"

[tool.hatch.build.targets.wheel]
packages = ["evaluator"]  # Updated to only include the evaluator package

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
]
